--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-<div>
-  <table>
-    <thead>
-      <tr>
-        <th>№</th>
-        <th>Title of the top 30 stories</th>
-        <th>Top commentator names</th>
-        <th>Number of comments</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let story of stories; let i = index">
-        <td>{{i+1}}</td>
-        <td><a href="{{story.url}}">{{story.title}}</a></td>
-        <td></td>
-        <td>{{story.descendants}}</td>
-      </tr>
-    </tbody>
-  </table>
+<div class="container">
+  <div class="stories">
+    <ol>
+      <li *ngFor="let story of stories">{{story.title}}</li>
+    </ol>
+  </div>
 </div>
 
 
